# Deep-Learning-Handbook

./: README.md  main.py  pyproject.toml
ANN/: ann.ipynb  mnist.ipynb
perceptron/: perceptron-trick.ipynb  perceptron.ipynb  problem-with-perceptron.ipynb  trick.ipynb
